<resources>
    <string name="app_name">CLAK - Connect to lock-and-key</string>
    <string name="loginID">loginID</string>
    <string name="password">Password</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="ssid">ssid</string>
    <string name="wifipicker">Choose your network</string>
    <string name="update_interval">Time in minutes</string>
    <string name="your_ip">Your IP:</string>
    <string name="your_loginid">Your loginID:</string>
    <string name="lbl_update_interval">Update Interval:</string>
    <string name="your_password">Your Password:</string>
    <string name="ip">IP</string>
    <string name="credentials_loginID">loginID</string>
    <string name="credentials_password">password</string>
    <string name="credentials_ip">ip</string>
    <string name="credentials_interval">interval</string>
    <string name="credentials_network">network</string>
    <string name="credentials_default">\"defaultValue\"</string>
    <string name="error_interval">invalid interval</string>
    <string name="cancel">Cancel</string>
    <string name="enable_gps">You have to enable GPS</string>
    <string name="fetch_ip">Fetch your IP</string>
    <string name="description_credentials">Enter your access data for the university network here and press the button to select your WLAN network.</string>
    <string name="description_times">Add the times you want to be connected to below. Use the button to add a new time or touch a time to remove it.</string>
    <string name="times">list_of_times</string>
    <string name="channel_name">CLAK_CHANNEL</string>
    <string name="channel_description">A channel to deliver notifications from CALK applicatino</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
